Fix for the drop down select on IE, Transparency for the home page banner, some @2x image resizes, Nav shadow fix from GF, Blue hex correction to nav

--- a/_css/Root_Project.css
+++ b/_css/Root_Project.css
@@ -49,6 +49,15 @@ li {
 	line-height: 130%;
 	font-size: 15px;
 }
+option {
+	outline: none;
+}
+option:focus {
+	color: #FFF;
+	background-color: #666;
+	border:none;
+	outline:none;
+}
 select {
 	/*Dark Grey - used in Gallery.php */ 
 	width: 200px;
@@ -62,28 +71,40 @@ select {
 	outline: none;
 	border-radius: 0px;
 	-moz-border-radius: 0;
+	-moz-appearance: none;
 	-webkit-border-radius: 0;
 	-webkit-appearance: none;
-	-moz-appearance: none;
 	padding-left: 15px;
 	padding-top: 4px;
 }
-select:hover {
+select:focus {
 	background-color: #666;
 	border:none;
+	outline: none;
+	border-radius: 0px;
 }
+
+
 a:link {
 	text-decoration: none;
 	color:#0099CC;
+	outline:none;
+	-moz-outline: none;
 }
 a:visited {
 	color: #0099CC;
+	outline:none;
+	-moz-outline: none;
 }
 a:hover {
 	color: #0099CC;
+	outline:none;
+	-moz-outline: none;
 }
 a:active {
 	color: #0099CC;
+	outline:none;
+	-moz-outline: none;
 }
 a.navUp {
 	font-size: 13px;
@@ -97,7 +118,7 @@ a.navDown {
 	font-size:13px;
 	letter-spacing:1px;
 	line-height:38px;
-	color: #3AADEF;
+	color: #0099cc;
 	text-align:center;
 	font-weight:250;
 }
@@ -145,17 +166,16 @@ a.navDown {
 	padding: 10px 15px 10px 15px;
 	width: 576px;
 	height: 360px;
-	background-image: url(../_images/homebannerbg_1by1.png);
-	background-repeat: repeat;
+	/*IE7*/
+	background-color:#343434;
+	/*IE8 and newer browsers*/
+	background-color: rgba(0,0,0,0.8);
+	
 	/*SHADOW*/
 	/* Firefox v3.5+ */
 	-moz-box-shadow: 0px 0px 10px rgba(0,0,0,0.50);
 	/* Safari v3.0+ and by Chrome v0.2+ */
 	-webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.50);
-	/* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.50);
-	-ms-filter: "progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=0,Color=#3d000000,Positive=true)";
-	filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=0,Color=#3d000000,Positive=true);
 
 }
 #HomeBannerDiv h1 {
@@ -459,11 +479,11 @@ a.navDown {
 	height: 38px;
 	top: -50px;
 	/* Firefox v3.5+ */
-	-moz-box-shadow: 0px 0px 10px rgba(0,0,0,0.50);
+	-moz-box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.80);
 	/* Safari v3.0+ and by Chrome v0.2+ */
-	-webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.50);
+	-webkit-box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.80);
 	/* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.50);
+	box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.80);
 	-ms-filter: "progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=0,Color=#3d000000,Positive=true)";
 	filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=0,Color=#3d000000,Positive=true);
 	/* IE 9 shadow fix */
@@ -535,7 +555,7 @@ a.navDown {
 }
 #StudentGalleryUpload {
 	float: left;
-	background-color: #3AADEF;
+	background-color: #0099cc;
 	width: 20%;
 	height: 26px;
 	color: #FFF;
@@ -616,7 +636,7 @@ a.navDown {
 	margin-top: 32px;
 }
 .GalleryBlueBar {
-	background-color: #00AEEF;
+	background-color: #0099cc;
 	width: 100%;
 	position: absolute;
 	display: block;
@@ -702,7 +722,7 @@ a.navDown {
 	margin-bottom: 0px;
 }
 .GalleryColumn1Div:hover {
-	background-color: #3AADEF;
+	background-color: #0099cc;
 	color:#FFF;
 	background-image: url(../_images/proj_gal_item_down.gif); 
 	background-position:bottom right;
@@ -731,7 +751,7 @@ a.navDown {
 	margin-bottom: 0px;
 }
 .GalleryColumn2Div:hover {
-	background-color: #3AADEF;
+	background-color: #0099cc;
 	color: #FFF;
 	background-image: url(../_images/proj_gal_item_down.gif);
 	background-position: bottom right;
@@ -759,7 +779,7 @@ a.navDown {
 	margin-bottom: 0px;
 }
 .GalleryColumn3Div:hover {
-	background-color: #3AADEF;
+	background-color: #0099cc;
 	color:#FFF;
 	background-image: url(../_images/proj_gal_item_down.gif);
 	background-position:bottom right;
