--- a/_css/main.css
+++ b/_css/main.css
@@ -10,16 +10,16 @@ body {
 
 a:link {
 	text-decoration: none;
-	color:#3AADEF;
+	color:#0099cc;
 }
 a:visited {
-	color: #3AADEF;
+	color: #0099cc;
 }
 a:hover {
-	color: #3AADEF;
+	color: #0099cc;
 }
 a:active {
-	color: #3AADEF;
+	color: #0099cc;
 }
 a.navUp {
 	font-size: 13px;
@@ -33,7 +33,7 @@ a.navDown {
 	font-size:13px;
 	letter-spacing:1px;
 	line-height:38px;
-	color: #3AADEF;
+	color: #0099cc;
 	text-align:center;
 	font-weight:250;
 }
@@ -137,7 +137,7 @@ a.navDown {
 	color: #FFF;
 	text-decoration: none;
 	background-attachment: scroll;
-	background-color: #00ADEF;
+	background-color: #0099cc;
 	background-repeat: no-repeat;
 	background-position: 5px center;
 	background-size: contain;
